Add Mastodon verification link

--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
 
   <body>
     <p style="padding: 0 0 0 3ch;">Work in progress 🚧</p>
+    <a style="display: none;" rel="me" href="https://mastodon.social/@Scio">Mastodon Verification</a>
   </body>
 </html>
