Remove the special padding now that we're using emoji for the placeholder

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </style>
 
   <body>
-    <p style="padding: 0 0 0 3ch;">Work in progress 🚧</p>
+    <p>Work in progress 🚧</p>
     <a style="display: none;" rel="me" href="https://mastodon.social/@Scio">Mastodon Verification</a>
   </body>
 </html>
