Add RelmeAuth for GitHub and Gmail

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 
   <body>
     <p>Work in progress 🚧</p>
-    <a style="display: none;" rel="me" href="https://mastodon.social/@Scio">Mastodon Verification</a>
+    <a style="display: none;" rel="me" href="https://mastodon.social/@Scio">@Scio on Mastodon.social</a><ul>
+    <a style="display: none;" href="https://github.com/5310" rel="me">@5310 on Github</a>
+    <a style="display: none;" href="mailto:sayantan.chaudhuri@gmail.com" rel="me">Gmail</a>
   </body>
 </html>
