Move `rel="me"`s into `<head>`
Will have to check and see whether Mastodon accepts that for verification!

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#fff">
 
+    <link rel="me" href="https://mastodon.social/@Scio">
+    <link rel="me" href="https://github.com/5310">
+    <link rel="me" href="mailto:sayantan.chaudhuri@gmail.com">
+
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="mask-icon" href="/favicon.svg" color="#FFFFFF" />
     <meta name="theme-color" content="#ffffff" />
@@ -41,11 +45,9 @@
         }
       }
     </style>
+  </head>
 
   <body>
     <p>Work in progress 🚧</p>
-    <a style="display: none;" rel="me" href="https://mastodon.social/@Scio">@Scio on Mastodon.social</a><ul>
-    <a style="display: none;" href="https://github.com/5310" rel="me">@5310 on Github</a>
-    <a style="display: none;" href="mailto:sayantan.chaudhuri@gmail.com" rel="me">Gmail</a>
   </body>
 </html>
