Add Friendica relme

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="theme-color" content="#fff">
 
     <link rel="me" href="https://mastodon.social/@Scio">
+    <link rel="me" href="https://friendica.world/profile/scio">
     <link rel="me" href="https://github.com/5310">
     <link rel="me" href="mailto:sayantan.chaudhuri@gmail.com">
 
